--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.3",
     "zod": "^3.23.8"
   },
@@ -29,6 +36,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
+    "tailwind-heropatterns": "^0.0.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
