--- a/ausec-quizzer/.env.example
+++ b/ausec-quizzer/.env.example
@@ -19,7 +19,4 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/ausec-quizzer"
 # https://next-auth.js.org/configuration/options#secret
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
-
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+NEXTAUTH_SECRET="secret"
