--- a/ausec-quizzer/components.json
+++ b/ausec-quizzer/components.json
@@ -9,7 +9,7 @@
     "cssVariables": true
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/utils/style"
+    "components": "~/components",
+    "utils": "~/utils/style"
   }
 }
