integrate resend with react-email

--- a/ausec-quizzer/package.json
+++ b/ausec-quizzer/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-email/components": "^0.0.25",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -35,7 +36,9 @@
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email": "^3.0.1",
     "react-hook-form": "^7.53.0",
+    "resend": "^4.0.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.3",
