--- a/ausec-quizzer/.env.example
+++ b/ausec-quizzer/.env.example
@@ -20,3 +20,6 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/ausec-quizzer"
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
+
+RESEND_API_KEY=""
+EMAIL_FROM=""
