--- a/ausec-quizzer/package.json
+++ b/ausec-quizzer/package.json
@@ -18,7 +18,9 @@
     "@auth/prisma-adapter": "^1.6.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "^0.0.25",
     "@t3-oss/env-nextjs": "^0.10.1",
