fix email templates and score email sending logic

--- a/ausec-quizzer/package.json
+++ b/ausec-quizzer/package.json
@@ -9,6 +9,9 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "email:build": "email build",
+    "email:preview": "email start",
+    "email:dev": "email dev",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
