--- a/ausec-quizzer/package.json
+++ b/ausec-quizzer/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.3.1",
     "react-email": "^3.0.1",
     "react-hook-form": "^7.53.0",
+    "react-simple-typewriter": "^5.0.1",
     "resend": "^4.0.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
