--- a/ausec-quizzer/.env.example
+++ b/ausec-quizzer/.env.example
@@ -20,8 +20,8 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/ausec-quizzer"
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
-EMAIL_SERVER_USER=resend
-EMAIL_SERVER_PASSWORD=YOUR_API_KEY
-EMAIL_SERVER_HOST=smtp.resend.com
+EMAIL_SERVER_USER=onboarding@puthulir.com
+EMAIL_SERVER_PASSWORD=PASSWORD
+EMAIL_SERVER_HOST=smtp.secureserver.net
 EMAIL_SERVER_PORT=465
-EMAIL_FROM=onboarding@resend.dev
+EMAIL_FROM=onboarding@puthulir.com
